<resources>
    <string name="app_name">AprendeConmigo</string>

    <!-- Sign In -->
    <string name="crea_una_cuenta">Crea una cuenta</string>
    <string name="ingresa_correo_msg">Ingresa tu correo electrónico para registrarte en esta aplicación</string>
    <string name="hint_correo">correoelectrónico@dominio.com</string>
    <string name="continuar">Continuar</string>
    <string name="continuar_con_google">Continuar con Google</string>
    <string name="o_separador">o</string>
    <string name="terminos_servicio">Términos de servicio y Política de privacidad</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta? Inicia sesión</string>

    <!-- Login -->
    <string name="ingresa_a_tu_cuenta">Ingresa a tu cuenta</string>
    <string name="hint_contrasena">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="crear_cuenta">Crear cuenta</string>

    <!-- Registro -->
    <string name="confirma_contrasena">Confirma tu contraseña</string>

    <!-- Persona -->
    <string name="quien_va_a_usar_la_app">¿Quién va a usar la app?</string>
    <string name="soy_estudiante">Soy estudiante</string>
    <string name="soy_maestro_tutor">Soy Maestro o Tutor</string>

    <!-- Crear perfil -->
    <string name="crea_tu_perfil">Crea tu perfil</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_edad">Edad</string>
    <string name="genero">Género</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="foto_de_perfil">Foto de perfil</string>

    <!-- Dashboard maestro -->
    <string name="inicio">Inicio</string>
    <string name="ser_grupos">Ser.grupos</string>
    <string name="ferch_ia">Ferch.IA</string>
    <string name="prepararate_para_el_tema">Prepárate para el tema</string>
    <string name="historial">Historial</string>
    <string name="grupos">Grupos</string>
    <string name="temario">Temario</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="configuracion">Configuración</string>
    <string name="perfil">Perfil</string>
    <string name="cerrar_sesion">Cerrar sesión</string>

    <!-- Grupos -->
    <string name="tus_grupos">Tus grupos</string>
    <string name="agregar_grupo">Agregar grupo</string>
    <string name="eliminar_grupo">Eliminar grupo</string>
    <string name="crea_el_codigo_para_tu_clase">Es hora de crear el código para tu clase</string>

    <!-- Temario -->
    <string name="agregar_tema">Agregar tema</string>
    <string name="eliminar_tema">Eliminar tema</string>
    <string name="temas_por_grupo">Temas por grupo</string>
</resources>
